# tiago_robot

./: .gitmodules
tiago_description/: CMakeLists.txt
tiago_description/robots/: tiago_airbus.urdf.xacro  tiago_iron.urdf.xacro  tiago_steel_with_translation.urdf.xacro
tiago_description/srdf/: tiago.srdf  tiago_airbus.srdf  tiago_grippers.srdf  tiago_with_translation.srdf
tiago_description/urdf/arm/: arm_with_translation.urdf.xacro
tiago_description/urdf/tool/: tool.xacro
